fixed a unregister problem

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ intellisense/lib/console/__pycache__/intellisense.cpython-37.pyc
 intellisense/lib/console/__pycache__/intellisense.cpython-310.pyc
 search_online/__pycache__/__init__.cpython-310.pyc
 .gitignore
+templetes/__pycache__/__init__.cpython-310.pyc
